@@ -16,7 +16,7 @@ AUX qt-3.3.8b-cstddef.patch 1197 SHA256 ea2c24d508e6f38f9724a852f1fdd1024a681922
 AUX qt-ulibc.patch 355 SHA256 6b57b1e25c1e2cebd51b8279fbcadb5e2d9bb77d19b10ea51a4f74c64bd65e2d SHA512 8cd3d637bb708fa5396e0e93b711c4fde74851beea7771b27f19ba8e660dc13d74236e15cb10829cbebd64a8b357ebc978a09961c448a54e21d9b41df39e012c WHIRLPOOL 1102370186f512ca28ccc195f2d1aa0cfc793b5fd0ac04725075971fcadf4162ca2e28f9611453fd1026b8e59f477aa9080fc288128cddc7453f06aa04fba14c
 DIST qt-x11-free-3.3.8b.tar.gz 17313883 SHA256 1b7a1ff62ec5a9cb7a388e2ba28fda6f960b27f27999482ebeceeadb72ac9f6e
 DIST qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387 SHA256 06994304d2b7c699c4b6ea4183877652e261170f74282e89a3700ce6d4a98918
-EBUILD qt-meta-3.3.8b-r1.ebuild 10834 SHA256 2c8fc8228ad830a136711a4baa210288ca8a17f048da4f066dde122eee681892 SHA512 564b69df9139aae63592848d73cb3b2d0d123abf55f60434bceda2c13a75c959d85b8a09d5efa534581070b5bd517d3c05556f16ace6d855ff68c0672fbdedef WHIRLPOOL ac7e8b10bb1eb6ae80ff8c164e6cd5aad4a4ffcecdd7e95bcab52c89f6069a889d6622fad0313b6e668125d378ffde2d954b7c8c6838f1975d7ebe3bcf2efff1
-EBUILD qt-meta-3.3.8b-r2.ebuild 10955 SHA256 b7ce019c7c173dbd8b129fb8532f8d8bd467bdb573bedf13d3e6199eeb6ca59f SHA512 57e1cfc34df511a7394eb722aa4644a04320a9ef0f16ac74d567899dc9c7060ef01d88fa996f157053bbf43c31d46b9ef1477845792c4830388cab2d904f773e WHIRLPOOL 18cd489a814c11723b0dad0c03a31d2dbcb26c0761a8d59de9910a015745af0b44a5450a907c39ec7d11411726e906359c93a571aad50ec1e487e7d43f74cba1
-MISC ChangeLog 49975 SHA256 ea0583bef31b6cf1b92cfc6be116622b8af6fffe032d2171beddf3a784350464 SHA512 5e732e86bd6ce1f682cce50508a1c98503ad16075ddbf82fc08575a1a66034f237d175a4e0102a95f0160267e68a7a68a85d52987fdbc2181daa2fb43889fafd WHIRLPOOL 9d9ca3a7d779086aba00d21f0e503cd45582d87c5c16db064c32ad4ac41152ee273d7c47c6de431cfc298b87eb188b8ba63deefe22d344ae112170b8f0a8ce3b
+EBUILD qt-meta-3.3.8b-r1.ebuild 10846 SHA256 aec8996be7f0bc34303fbb372e5518034e4b4d1a5f76178cb27af9482da09e61 SHA512 85fa9745f082b6d8b245358de48dbce3683d1a26b63a5758f26fd98d58e8c067a24d65b1f507d3539e618614e6f1e273c6cad60dd7fc2cc37b3ff720f9b5902a WHIRLPOOL 66f4a38e3e4a716cb14c9ca5b6a25f595ce65a3341429ffc4c9004e8a566d49941016ea19688789b0d2d3b72ebbc7cadf64cee8b10a6729c917bd3070a4c376a
+EBUILD qt-meta-3.3.8b-r2.ebuild 10967 SHA256 ee6e78469f4961dcb150b26c02c05ca0d0144cfa5f2620a02b5f5501dfdd1a27 SHA512 95c1fcb47ef514558a8b03eade9b2f56c1f4d9abfe6cac770a688b27608f878991ef3927e1fcdd7b1e944ba53f6d67addc3f6338d3932702a8b06019add54fb2 WHIRLPOOL b91e133865bbf62d154f78a0fd55e9f5bc53eaf9cad4cd67f697fb7d3bb3172757772faa24bce447739a9fc49b1dba7afa8612b6c039ea0ceb61ef6e67f8a719
+MISC ChangeLog 50114 SHA256 a7f3d4b071449dd3b5f456319f43d2fbc3336203c0ceb6f4b7a3cf52a25f4181 SHA512 e6a3b31f5e1f2fed99e30ce246ef0b6770d155281dd06cac23740fa55cf959012060be9b119b5e554d66337ca0b4fe992186cf21520f654a2aa379cba57f3f17 WHIRLPOOL ab314eb460308f6190809492df65062717a9e43189370610664e8869d6c50ce0bafdedb0d8e1b912747c656792c023325996fc2abab4cae4339985e65f463b77
 MISC metadata.xml 335 SHA256 53934f5173007d42204665e1561d36656c6ecf587162b8eb4e289fcfa88c577a SHA512 006c6c8bb33b0a5a7eca4910a6ba12fb4ed307d8d8478c77d20ee5d659bdab0320491e992c45e225ac4b778a78eea7f5dabe06c3abf848741f2cfe5477fa104a WHIRLPOOL 4978b14b3a69f928cfde293cbf9614d131c1f17d00c4f54420ebe7d20e5305f52cc61e58cc3748618d51a6b0679db40ab1760b000876c742c1d7a522f2c575e0
